--- a/srv/i18n/i18n.properties
+++ b/srv/i18n/i18n.properties
@@ -1,3 +1,12 @@
 welcome.subject = Welcome to your Galactic Spacefarer Adventure!
 welcome.text = Dear {0},\n\nCongratulations! Your journey has begun!
 validation.negativeValues = Stardust Collection and Wormhole Navigation Skill cannot be negative.
+
+fullName=Name
+originPlanet=Origin Planet
+stardustCollection=Stardust Collection
+wormholeNavigationSkill=Wormhole Navigation Skill
+spacesuitColour=Spacesuit Colour
+generalInformation=General Information
+departmentName=Department
+positionTitle=Position
