Adding Create Action

--- a/srv/i18n/i18n.properties
+++ b/srv/i18n/i18n.properties
@@ -1,6 +1,8 @@
 welcome.subject = Welcome to your Galactic Spacefarer Adventure!
 welcome.text = Dear {0},\n\nCongratulations! Your journey has begun!
+
 validation.negativeValues = Stardust Collection and Wormhole Navigation Skill cannot be negative.
+validation.requiredFields = Full Name and Origin Planet are required fields!
 
 fullName=Name
 originPlanet=Origin Planet
@@ -10,3 +12,6 @@ spacesuitColour=Spacesuit Colour
 generalInformation=General Information
 departmentName=Department
 positionTitle=Position
+
+create=Create
+createNewSpacefarer=Create New Spacefarer
