Correcting dropdowns and preparing for CloudFoundry deployment

--- a/app/galactic_spacefarer_adventures/webapp/i18n/i18n.properties
+++ b/app/galactic_spacefarer_adventures/webapp/i18n/i18n.properties
@@ -7,3 +7,9 @@ appTitle=Galactic Spacefarer Adventures
 
 #YDES: Application description
 appDescription=An SAP Fiori application for Spacefarers.
+
+#XTIT: Title of the application
+appTitle=appTitle
+
+#XFLD,54
+galactic_spacefarer_adventures-display.flpTitle=Galactic Adventure
